--- a/wp-content/themes/gtoken/scss/components/_menu.scss
+++ b/wp-content/themes/gtoken/scss/components/_menu.scss
@@ -29,6 +29,12 @@
 			}
 		}
 
+		.lang-item {
+			&::marker {
+				display: none;
+			}
+		}
+
 		&__first-level {
 			color: $white;
 			font-size: 20px;
