--- a/wp-content/themes/gtoken/scss/main.scss
+++ b/wp-content/themes/gtoken/scss/main.scss
@@ -35,4 +35,5 @@ Text Domain: palermo
 @import 'blocks/_wrapper',
 'blocks/_default-block',
 'blocks/_text-papper',
+'blocks/faqs',
 'blocks/_number-grid';
