--- a/wp-content/themes/gtoken/scss/blocks/_faqs.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_faqs.scss
@@ -1,6 +1,7 @@
 .accordion--faqs {
     .accordion__question {
         color: $pink-color;
+        font-size: 30px;
     }
 
     .accordion__answer {
