--- a/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
@@ -64,8 +64,7 @@
 
         &::before {
             content: '';
-            background: url(images/icons/arrow-select.svg) no-repeat center/contain;
-            transform: rotate(-90deg);
+            background: url(images/icons/arrow-select.png) no-repeat center/contain;
             margin-right: 20px;
             display: inline-block;
             width: 20px;
