--- a/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
@@ -62,8 +62,7 @@
 
             &::before {
                 content: '';
-                background: url(images/icons/arrow-select.svg) no-repeat center/contain;
-                transform: rotate(-90deg);
+                background: url(images/icons/arrow-select-pink.png) no-repeat center/contain;
                 margin-right: 20px;
                 display: inline-block;
                 width: 20px;
