--- a/wp-content/themes/gtoken/scss/layout/_footer.scss
+++ b/wp-content/themes/gtoken/scss/layout/_footer.scss
@@ -56,11 +56,20 @@
 			.email,
 			.content__link {
 				margin-right: 30px;
+				font-size: 20px;
 
 				a {
 					color: $white;
+					text-decoration: none;
 				}
 
+			}
+
+			.content__link {
+				a {
+					font-weight: 700;
+					text-transform: uppercase;
+				}
 			}
 
 
