--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -402,8 +402,9 @@ strong * {
 								        transform: translateX(0);
 				}
 }
-.header .site-menu .lang-item::marker {
+.header .site-menu li.lang-item::marker {
 				display: none;
+				opacity: 0;
 }
 .header .site-menu__first-level {
 				color: #ffffff;
@@ -1885,12 +1886,18 @@ select option {
 .site-footer__logo-column__two .email,
 .site-footer__logo-column__two .content__link {
 				margin-right: 30px;
+				font-size: 20px;
 }
 .site-footer__logo-column__two .copyright a,
 .site-footer__logo-column__two .direccion a,
 .site-footer__logo-column__two .email a,
 .site-footer__logo-column__two .content__link a {
 				color: #ffffff;
+				text-decoration: none;
+}
+.site-footer__logo-column__two .content__link a {
+				font-weight: 700;
+				text-transform: uppercase;
 }
 .site-footer__logo-column__three {
 				display: -webkit-box;
@@ -2796,9 +2803,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 .text-papper .content__link::before {
 				content: "";
-				background: url(images/icons/arrow-select.svg) no-repeat center/contain;
-				-webkit-transform: rotate(-90deg);
-				        transform: rotate(-90deg);
+				background: url(images/icons/arrow-select-pink.png) no-repeat center/contain;
 				margin-right: 20px;
 				display: inline-block;
 				width: 20px;
@@ -2807,6 +2812,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 
 .accordion--faqs .accordion__question {
 				color: #FB3BA5;
+				font-size: 30px;
 }
 .accordion--faqs .accordion__answer {
 				display: none;
@@ -2897,9 +2903,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 .number_grid__link::before {
 				content: "";
-				background: url(images/icons/arrow-select.svg) no-repeat center/contain;
-				-webkit-transform: rotate(-90deg);
-				        transform: rotate(-90deg);
+				background: url(images/icons/arrow-select.png) no-repeat center/contain;
 				margin-right: 20px;
 				display: inline-block;
 				width: 20px;
