--- a/wp-content/themes/gtoken/scss/main.scss
+++ b/wp-content/themes/gtoken/scss/main.scss
@@ -36,4 +36,5 @@ Text Domain: palermo
 'blocks/_default-block',
 'blocks/_text-papper',
 'blocks/faqs',
+'blocks/image-text',
 'blocks/_number-grid';
