--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -2817,6 +2817,47 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				display: none;
 }
 
+.image-text {
+				position: relative;
+}
+.image-text::after {
+				content: "";
+				background-color: #3ACBED;
+				position: absolute;
+				top: 10px;
+				z-index: -1;
+				width: 100%;
+				height: 456px;
+}
+.image-text__cont {
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
+}
+.image-text__image__logo {
+				position: absolute;
+				top: 0;
+}
+.image-text__buttons {
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
+				gap: 20px;
+}
+.image-text__buttons a,
+.image-text__buttons img {
+				width: 240px;
+				height: 78px;
+				-o-object-fit: cover;
+				   object-fit: cover;
+}
+
 .number_grid {
 				padding-top: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
 				padding-bottom: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
