--- a/wp-content/themes/gtoken/scss/main.scss
+++ b/wp-content/themes/gtoken/scss/main.scss
@@ -37,4 +37,5 @@ Text Domain: palermo
 'blocks/_text-papper',
 'blocks/faqs',
 'blocks/image-text',
-'blocks/_number-grid';
+'blocks/_number-grid',
+'blocks/_slider-links';
