--- a/wp-content/themes/gtoken/scss/abstracts/_variables.scss
+++ b/wp-content/themes/gtoken/scss/abstracts/_variables.scss
@@ -14,7 +14,7 @@ $primary-color: #34375A !default;
 $pink-color: #FB3BA5 !default;
 $light-blue-color: #3ACBED !default;
 $light-grey: #F9F9F9 !default;
-$dark-black: #231F20 !default;
+$light-black: #231F20 !default;
 $black: #000 !default;
 $white: #ffffff !default;
 $grey: #DFE3EC !default;
