--- a/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
@@ -22,7 +22,7 @@
                 line-height: 1.2;
                 font-weight: 600;
                 text-transform: uppercase;
-                color: $dark-black;
+                color: $light-black;
 
                 span {
                     color: $pink-color;
@@ -38,7 +38,7 @@
 
             p {
                 font-size: rv(18px, 22px);
-                color: $dark-black;
+                color: $light-black;
                 font-weight: 400;
                 line-height: 1.6;
             }
@@ -52,7 +52,7 @@
             a {
                 font-size: rv(20px, 26px);
                 text-decoration: none;
-                color: $dark-black;
+                color: $light-black;
 
                 span {
                     color: $light-blue;
