--- a/wp-content/themes/gtoken/scss/blocks/_wrapper.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_wrapper.scss
@@ -24,7 +24,7 @@
         background-color: $light-grey;
     }
 
-    &--light-blue {
-        background-color: $light-blue;
+    &--light-black {
+        background-color: $light-black;
     }
 }
